part2/main-app/manifests/deployment-persistent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      volumes:
      - name: shared-main
        persistentVolumeClaim:
          claimName: example-claim
      containers:
        - name: main-app-generator
          image: thangnv2212/main-app-generator
          volumeMounts:
          - name: shared-main
            mountPath: /tmp
        - name: main-app-reader
          image: thangnv2212/main-app-reader
          volumeMounts:
          - name: shared-main
            mountPath: /tmp
