part2/main-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-svc
  namespace: main-ns
spec:
  type: ClusterIP
  selector:
    app: main
  ports:
    - protocol: TCP
      port: 1234 # cluster internal port
      targetPort: 80 # app port
